// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display the available edition boxes correctly 1`] = `
<div
  className="spacer-bottom marketplace-editions"
>
  <EditionBox
    currentEdition="community"
    edition={
      {
        "downloadProperty": "downloadDeveloperUrl",
        "homeUrl": "https://www.sonarsource.com/plans-and-pricing/developer/",
        "key": "developer",
        "name": "Developer Edition",
      }
    }
    key="developer"
  />
  <EditionBox
    currentEdition="community"
    edition={
      {
        "downloadProperty": "downloadEnterpriseUrl",
        "homeUrl": "https://www.sonarsource.com/plans-and-pricing/enterprise/",
        "key": "enterprise",
        "name": "Enterprise Edition",
      }
    }
    key="enterprise"
  />
  <EditionBox
    currentEdition="community"
    edition={
      {
        "downloadProperty": "downloadDatacenterUrl",
        "homeUrl": "https://www.sonarsource.com/plans-and-pricing/data-center/",
        "key": "datacenter",
        "name": "Data Center Edition",
      }
    }
    key="datacenter"
  />
</div>
`;

exports[`should display the datacenter edition box only 1`] = `
<div
  className="spacer-bottom marketplace-editions"
>
  <EditionBox
    currentEdition="enterprise"
    edition={
      {
        "downloadProperty": "downloadDatacenterUrl",
        "homeUrl": "https://www.sonarsource.com/plans-and-pricing/data-center/",
        "key": "datacenter",
        "name": "Data Center Edition",
      }
    }
    key="datacenter"
  />
</div>
`;

exports[`should display the enterprise and datacenter edition boxes 1`] = `
<div
  className="spacer-bottom marketplace-editions"
>
  <EditionBox
    currentEdition="developer"
    edition={
      {
        "downloadProperty": "downloadEnterpriseUrl",
        "homeUrl": "https://www.sonarsource.com/plans-and-pricing/enterprise/",
        "key": "enterprise",
        "name": "Enterprise Edition",
      }
    }
    key="enterprise"
  />
  <EditionBox
    currentEdition="developer"
    edition={
      {
        "downloadProperty": "downloadDatacenterUrl",
        "homeUrl": "https://www.sonarsource.com/plans-and-pricing/data-center/",
        "key": "datacenter",
        "name": "Data Center Edition",
      }
    }
    key="datacenter"
  />
</div>
`;
